--- a/ir-app/package.json
+++ b/ir-app/package.json
@@ -17,6 +17,7 @@
     "dayjs": "^1.11.10",
     "react": "^18.2.0",
     "react-bootstrap": "^2.10.2",
+    "react-bootstrap-datetimepicker": "^0.0.22",
     "react-dom": "^18.2.0",
     "react-icons": "^5.0.1",
     "react-minimal-pie-chart": "^8.4.0",
