--- a/ir-app/package.json
+++ b/ir-app/package.json
@@ -18,6 +18,7 @@
     "react": "^18.2.0",
     "react-bootstrap": "^2.10.2",
     "react-bootstrap-datetimepicker": "^0.0.22",
+    "react-datepicker": "^6.6.0",
     "react-dom": "^18.2.0",
     "react-icons": "^5.0.1",
     "react-minimal-pie-chart": "^8.4.0",
