--- a/ir-app/package.json
+++ b/ir-app/package.json
@@ -22,6 +22,7 @@
     "react-dom": "^18.2.0",
     "react-icons": "^5.0.1",
     "react-minimal-pie-chart": "^8.4.0",
+    "react-paginate": "^8.2.0",
     "react-scripts": "5.0.1",
     "web-vitals": "^2.1.4"
   },
